# for_far_test

./: .dockerignore  .env.dev  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  Makefile
app/check_printer/: admin.py  apps.py  custom_render.py  custom_responses.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
app/check_printer/migrations/: 0001_initial.py  0002_alter_printer_point_id.py  0003_alter_check_order_alter_check_status.py  0004_alter_check_pdf_file.py
app/check_printer/service/: create_check.py  create_pdf_check.py  generate_pdf.py  get_pdf_file.py
app/check_printer/templates/: client_check.html  kitchen_check.html
app/src/: settings.py  urls.py
app/src/settings/: __init__.py
app/src/settings/components/: __init__.py  base.py  rq_settings.py
app/src/settings/environments/: development.py  local.py  production.py
doc/: task.md
